elasticsearch/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    role: backend 
    infras: s8
spec:
  ports:
  - name: transport
    port: 9300
  - name: http
    port: 9200
  selector:
    app: elasticsearch
    role: elasticsearch
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: elasticsearch-master
#   labels:
#     role: backend 
#     infras: s8
# spec:
#   ports:
#   - name: transport
#     port: 9300
#   selector:
#     app: elasticsearch
#     role: elasticsearch-master
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: elasticsearch-client
#   labels:
#     role: backend
#     infra: s8
# spec:
#   ports:
#   - name: http
#     port: 9200
#   - name: transport
#     port: 9300
#   selector:
#     app: elasticsearch
#     role: elasticsearch-client
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: elasticsearch-data
#   labels:
#     role: backend 
#     infras: s8
# spec:
#   ports:
#   - name: transport
#     port: 9300
#   selector:
#     app: elasticsearch
#     role: elasticsearch-data
---
apiVersion: v1
kind: Service
metadata:
  name: cerebro
  labels:
    role: backend 
    infras: s8
spec:
  ports:
  - name: http
    port: 9000
    targetPort: cerebro-http
  selector:
    app: elasticsearch
    role: cerebro
