elasticsearch/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: es.dev.leangeder.eu
    http:
      paths:
      - backend:
          serviceName: elasticsearch
          servicePort: http
  - host: cerebro.leangeder.eu
    http:
      paths:
      - backend:
          serviceName: cerebro
          servicePort: http
